# sound-lyrics

./: .env.example  .gitignore  README.md  lyrics_finder.py  main.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: pregunta-o-discusión.md  reporte-de-bug.md  solicitud-de-característica.md
.github/workflows/: ci.yml
